# quadrotor_target_tracking

./: Dockerfile  Readme.md  build_docker.bash  build_packages.bash  run_docker.bash
install/: local_setup.sh  setup.sh
install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/: reference_state.h  reference_state.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/detail/: reference_state__builder.hpp  reference_state__functions.h  reference_state__rosidl_typesupport_fastrtps_c.h  reference_state__rosidl_typesupport_fastrtps_cpp.hpp  reference_state__rosidl_typesupport_introspection_c.h  reference_state__rosidl_typesupport_introspection_cpp.hpp  reference_state__struct.h  reference_state__struct.hpp  reference_state__traits.hpp  reference_state__type_support.h
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/: __init__.py  (+3 more)
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/custom_interfaces/share/ament_index/resource_index/package_run_dependencies/: custom_interfaces
install/custom_interfaces/share/ament_index/resource_index/parent_prefix_path/: custom_interfaces
install/custom_interfaces/share/ament_index/resource_index/rosidl_interfaces/: custom_interfaces
install/custom_interfaces/share/custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/custom_interfaces/share/custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  custom_interfacesConfig-version.cmake  custom_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/custom_interfaces/share/custom_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/custom_interfaces/share/custom_interfaces/msg/: ReferenceState.idl  ReferenceState.msg
install/ground_robot_control/lib/ground_robot_control/: ground_robot_PID  ground_robot_reference
install/ground_robot_control/share/ground_robot_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ground_robot_control/share/ground_robot_control/cmake/: ground_robot_controlConfig.cmake
install/quadrotor_control/lib/quadrotor_control/: quadrotor_mpc  quadrotor_vision
install/quadrotor_control/share/ament_index/resource_index/package_run_dependencies/: quadrotor_control
install/quadrotor_control/share/ament_index/resource_index/parent_prefix_path/: quadrotor_control
install/quadrotor_control/share/quadrotor_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/quadrotor_control/share/quadrotor_control/cmake/: quadrotor_controlConfig-version.cmake  quadrotor_controlConfig.cmake
install/quadrotor_control/share/quadrotor_control/environment/: ament_prefix_path.dsv  path.dsv
install/robots_description/share/robots_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robots_description/share/robots_description/config/: dji_m100_params.yaml
install/robots_description/share/robots_description/meshes/: Marker0.mtl
install/robots_description/share/robots_description/robots/: dji_m100.urdf  dji_m100.xacro  ground_robot.xacro
install/simulation/share/simulation/: package.dsv  package.ps1  package.sh
install/simulation/share/simulation/config/: simulation.yaml
install/simulation/share/simulation/launch/: target_tracking.launch.py
install/simulation/share/simulation/world/: canyonview_field.world
log/: latest_build  latest_clean
src/custom_interfaces/: CMakeLists.txt
src/ground_robot_control/: CMakeLists.txt
src/ground_robot_control/src/: ground_robot_PID.cpp  ground_robot_reference.cpp
src/quadrotor_control/: CMakeLists.txt
src/quadrotor_control/include/quadrotor_control/: quadrotor_MPC.h
src/quadrotor_control/src/: quadrotor_mpc.cpp  quadrotor_vision.cpp
src/robots_description/: ground_robot.urdf  setup.cfg  setup.py
src/robots_description/robots/: dji_m100.urdf  ground_robot.urdf  ground_robot.xacro.urdf
src/simulation/: package.xml  setup.py
src/simulation/launch/: target_tracking.launch.py
(+3 files in other folders)
